# memorization_practice

./: .gitignore  DEVELOPMENT.md  HTTPS_DEPLOYMENT.md  INSTALLATION_COMPLETE.md  ONBOARDING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  TESTING.md  analyze_corners.js  animcubejs-playground.html  cleanup-duplicate-tests.sh  cleanup-tests.sh  debug-edge-conversion.js  deploy-production.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  firebase-config.json  index.html  package-lock.json  package.json  playwright.config.ts  production.env  production.env.example  serve.py  simple-test.html  simple-test.js  start-https-dev.sh  test-cube-scrambler.html  test-firebase.html  test-https.sh  test-lw-fix.js  test-refactored-architecture.js  test-sequence-validator.js  test_edge_conversion.js  tsconfig.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_total_time.py  004_add_recall_verification.py
backend/src/: __init__.py  main.py
backend/src/api/routes/: __init__.py  notation_sessions.py  sessions.py  stats.py  users.py
backend/src/core/: auth.py  config.py  database.py  firebase.py
backend/src/models/: __init__.py  session.py  user.py
backend/src/repositories/: __init__.py  notation_session_repository.py  session_repository.py  stats_repository.py  user_repository.py
backend/src/schemas/: __init__.py  session.py  stats.py  user.py
commands/: plan_feature.md
docs/: COMPLETE_WEBSITE_DOCUMENTATION.md  (+22 more)
(+146 files in other folders)
